--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .slider ul{
             position: absolute;
-            bottom: 100px;
+            bottom: 200px;
             z-index: 999;
             width: 100%;
         }
@@ -47,20 +47,15 @@
             top: -80px;
         }
         .slider li:nth-of-type(1) a::before{
-            background: url("images/g1.jpg") center;
+            background: url("images/t1.jpg") center;
         }
         .slider li:nth-of-type(2) a::before{
-            background: url("images/g2.jpg") center;
+            background: url("images/t2.jpg") center;
         }
         .slider li:nth-of-type(3) a::before{
-            background: url("images/g3.jpg") center;
+            background: url("images/t3.jpg") center;
         }
-        .slider li:nth-of-type(4) a::before{
-            background: url("images/g4.jpg") center;
-        }
-        .slider li:nth-of-type(5) a::before{
-            background: url("images/g5.jpg") center;
-        }
+
         .slider img{
             position: fixed;
             left: 0%;
@@ -72,83 +67,18 @@
             z-index: 1;
         }
 
-        .slider img:nth-of-type(1):target{
-            z-index: 100;
-            animation: leftSilder 1s linear;
-        }
-        .slider img:nth-of-type(2):target{
-            z-index: 100;
-            animation: bottomSilder 1s linear;
-        }
-        .slider img:nth-of-type(3):target{
-            z-index: 100;
-            animation: moveInSilder 1s linear;
-        }
-        .slider img:nth-of-type(4):target{
-            z-index: 100;
-            animation: moveOutSilder 1s linear;
-        }
-        .slider img:nth-of-type(5):target{
-            z-index: 100;
-            animation: rotateSilder 1s linear;
-        }
-        @keyframes leftSilder {
-            0%{
-                left: -50%;
-            }
-            100%{
-                left: 0;
-            }
-        }
-        @keyframes bottomSilder {
-            0%{
-                top: 350px;
-            }
-            100%{
-                top: 0;
-            }
-        }
-        @keyframes moveInSilder {
-            0%{
-                transform: scale(.1);
-            }
-            100%{
-                transform: scale(1);
-            }
-        }
-        @keyframes moveOutSilder {
-            0%{
-                transform: scale(2);
-            }
-            100%{
-                transform: scale(1);
-            }
-        }
-        @keyframes rotateSilder {
-            0%{
-                transform: rotate(-360deg) scale(.1);
-            }
-            100%{
-                transform: rotate(0) scale(1);
-            }
-        }
     </style>
 </head>
 
 <body>
     <div class="slider">
         <ul>
-            <li><a href="#bg1">茶山</a></li>
-            <li><a href="#bg2">压茶</a></li>
-            <li><a href="#bg3">倒茶</a></li>
-            <li><a href="#bg4">茶具</a></li>
-            <li><a href="#bg5">茶具</a></li>
+            <li><a href="charen.html" title="制茶 品茶 论茶 茶人茶话 茶人茶语">茶人茶语</a></li>
+            <li><a href="touzi.html" title="茶叶投资">茶叶投资</a></li>
+            <li><a href="huodong.html">活动</a></li>
+
         </ul>
         <img id="bg1" src="images/g1.jpg" alt="">
-        <img id="bg2" src="images/g2.jpg" alt="">
-        <img id="bg3" src="images/g3.jpg" alt="">
-        <img id="bg4" src="images/g4.jpg" alt="">
-        <img id="bg5" src="images/g5.jpg" alt="">
     </div>
 </body>
 
