--- a/touzi.html
+++ b/touzi.html
@@ -27,7 +27,7 @@
             </ol>
         </nav>
         <div class="content shadow ma-auto p-3">
-            <a href="#" class="float-left"><img src="images/xut01-s.jpg" class="rounded-circle touxiang"></a>
+            <a href="#" class="float-left"><img src="images/t01-s.jpg" class="rounded-circle touxiang"></a>
             <div class="jieshao pt-3">
                 <p>
                     徐韬先生来自云南省宣威市，宣威是著名的火腿之乡，邓小平夫人卓琳的故乡。
