--- a/charen.html
+++ b/charen.html
@@ -9,7 +9,13 @@
 
     <!-- 自定义的样式一般放在后面 -->
     <style>
-
+        .touxiang {
+            width: 80px;
+            height: 80px;
+        }
+        .jieshao {
+            margin-left: 100px;
+        }
     </style>
 </head>
 <body>
@@ -22,6 +28,34 @@
         </nav>
         <div class="content shadow ma-auto p-3">
             制茶、品茶、论茶
+        </div>
+        <div class="content shadow ma-auto p-3">
+            <a href="#" class="float-left"><img src="images/c01-s.jpg" class="rounded-circle touxiang"></a>
+            <div class="jieshao pt-3">
+                <p>
+                    范和钧（1905-1989），江苏省常熟人。
+                    早年留法勤工俭学，归国后在上海商检局工作期间，深入茶叶产区考察研究，与吴觉农先生合著《中国茶业问题》一书。
+                    1939年3月，受云南中国茶叶公司委托筹建佛海茶厂。
+                </p>
+            </div>
+        </div>
+        <div class="content shadow ma-auto p-3">
+            <a href="#" class="float-left"><img src="images/c02-s.jpg" class="rounded-circle touxiang"></a>
+            <div class="jieshao pt-3">
+                <p>
+                    邹炳良，1939年生，中国采用渥堆方法生产普洱茶最早探索、研究、重要的实践者。
+                    邹炳良和卢国龄配制出来的优良普洱茶产品有7542七子饼、7572七子饼、7532七子饼、8582七子饼、7262七子饼等，是普洱茶爱好者捧追茶品。
+                </p>
+            </div>
+        </div>
+        <div class="content shadow ma-auto p-3">
+            <a href="#" class="float-left"><img src="images/c03-s.jpg" class="rounded-circle touxiang"></a>
+            <div class="jieshao pt-3">
+                <p>
+                    吕杨阳，从茶山和茶厂走出的茶叶人，2008年创立云南阳溢茶业有限公司，目前已开10多家茶叶店。
+                    公司是云南省茶叶流通协会副会长单位、昆明茶叶行业协会副会长单位，同时获得2019年度中国云南最具投资价值奖、2019年度中国云南最具发展价值奖等诸多荣誉。
+                </p>
+            </div>
         </div>
     </div>
     <!-- Bootstrap core JavaScript
