--- a/cha.html
+++ b/cha.html
@@ -17,11 +17,11 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="http://chazhiju.com/">茶之居</a></li>
-            <li class="breadcrumb-item active" aria-current="page">活动</li>
+            <li class="breadcrumb-item active" aria-current="page">茶叶</li>
             </ol>
         </nav>
         <div class="content shadow ma-auto p-3">
-            暂无活动
+            茶、茶、茶！
         </div>
     </div>
     <!-- Bootstrap core JavaScript
