--- a/charen.html
+++ b/charen.html
@@ -57,6 +57,15 @@
                 </p>
             </div>
         </div>
+        <div class="content shadow ma-auto p-3">
+            <a href="#" class="float-left"><img src="images/c04-s.jpg" class="rounded-circle touxiang"></a>
+            <div class="jieshao pt-3">
+                <p>
+                    《茶的品格：中国茶诗新解》是知名茶人杨多杰近期力作，精选唐、宋、明、清四代文人茶诗三十首，说古道今，带读者领略氤氲茶香。
+                    本书从茶诗出发，谈人情物理，论茶学渊源，再现了古时的品茶场景，描绘了文人间品茗赠茶的佳话。
+                </p>
+            </div>
+        </div>
     </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
