--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         }
         .slider ul li{
             display: inline-block;
-            width: 170px;
-            padding-top: 60px;
-            padding-bottom: 20px;
+            width: 120px;
+            padding-top: 35px;
+            padding-bottom: 10px;
             background-color: #02646e;
             position: relative;
         }
@@ -38,12 +38,12 @@
         .slider li a::before{
             content: "";
             display: inline-block;
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             border: 5px solid #fff;
             border-radius: 50%;
             position: absolute;
-            left: 20px;
+            left: 5px;
             top: -80px;
         }
         .slider li:nth-of-type(1) a::before{
@@ -75,7 +75,7 @@
         <ul>
             <li><a href="charen.html" title="制茶 品茶 论茶 茶人茶话 茶人茶语">茶人茶语</a></li>
             <li><a href="touzi.html" title="茶叶投资">茶叶投资</a></li>
-            <li><a href="huodong.html">活动</a></li>
+            <li><a href="cha.html">茶叶</a></li>
 
         </ul>
         <img id="bg1" src="images/g1.jpg" alt="">
