--- a/touzi.html
+++ b/touzi.html
@@ -36,6 +36,15 @@
                 </p>
             </div>
         </div>
+        <div class="content shadow ma-auto p-3">
+            <a href="#" class="float-left"><img src="images/t02-s.jpg" class="rounded-circle touxiang"></a>
+            <div class="jieshao pt-3">
+                <p>
+                    白水清先生曾被评为全球普洱茶“十大杰出人物”之一，淘宝官方旗舰店“普洱藏家”掌柜。
+                    白先生历年来收藏了清末向质卿、宋聘、红印、88青饼等众多普洱老茶，对普洱茶的研究非常有经验，是世界茶文化交流协会永久荣誉会长。
+                </p>
+            </div>
+        </div>
     </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
