--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .slider ul{
             position: absolute;
-            bottom: 200px;
+            bottom: 100px;
             z-index: 999;
             width: 100%;
         }
@@ -55,7 +55,9 @@
         .slider li:nth-of-type(3) a::before{
             background: url("images/t3.jpg") center;
         }
-
+        .slider li:nth-of-type(4) a::before{
+            background: url("images/t4.jpg") center;
+        }
         .slider img{
             position: fixed;
             left: 0%;
@@ -74,9 +76,9 @@
     <div class="slider">
         <ul>
             <li><a href="charen.html" title="制茶 品茶 论茶 茶人茶话 茶人茶语">茶人茶语</a></li>
-            <li><a href="touzi.html" title="茶叶投资">茶叶投资</a></li>
+            <li><a href="touzi.html" title="茶叶投资">茶叶投资</a></li><br/><br/><br/><br/><br/>
             <li><a href="cha.html">茶叶</a></li>
-
+            <li><a href="about.html">关于</a></li>
         </ul>
         <img id="bg1" src="images/g1.jpg" alt="">
     </div>
