--- a/about.html
+++ b/about.html
@@ -80,12 +80,26 @@
             </div>
             <div class="row my-3 timeline-pointer flex-row-reverse">
                 <div class="col-sm-6">
-                    <h3>茶之居想做什么？ </h3>
+                    <h3>11月16日，茶之居About。 </h3>
                     <p>饮茶粤海未能忘，索句渝州叶正黄。三十一年还旧国，落花时节读华章。牢骚太盛防肠断，风物长宜放眼量。莫道昆明池水浅，观鱼胜过富春江。</p>
                     <p>《七律·和柳亚子先生》是近代诗人毛泽东于1949年4月19日所写的一首诗，毛泽东是一个酷爱喝茶的人。茶的故事很多，作为一个非茶人做的茶相关网站，我会更关注茶的故事。 </p>
                 </div>
                 <div class="col-sm-6">
                     <div class="box"><img class="img-fluid" src="images/a02.jpg" alt=""></div>
+                </div>
+            </div>
+            <div class="row my-3 timeline-pointer">
+                <div class="col-sm-6">
+                    <h3>11月17日，茶之居Slogan。 </h3>
+                    <p>Stay hungry，Stay foolish（求知若渴，虚怀若愚）。</p>
+                    <p>昨天（11月16日）是我关注的一个区块链网站成立三周年，对区块链我不了解，关注这个网站想稍微知道一些区块链的知识。 <br/>
+                    区块链是一个新的领域，更是一个充满不确定性的领域，但是在每个领域都有不确定性，每一天都充满未知，创业者希望知道未来，期待跟随浪潮一起乘风破浪。
+                    “我们怕熬夜秃头更新，却没能第一时间传递给你；我们怕好的内容和创意，却没有关注的人”。作为媒体网站，所关心的事情会有相同的本质。
+                    一个网站不只是技术，也要思考媒体人怎么想。                        
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <div class="box"><img class="img-fluid" src="images/a03.jpg" alt=""></div>
                 </div>
             </div>            
         </div>
